@@ -18,6 +18,8 @@ Revision history for DBIx::Class
           column in the GROUP BY clause
         - Properly support column names with symbols (e.g. single quote)
           via custom accessors
+        - Fixed ::Schema::Versioned to work properly with quoting on
+          (RT#59619)
 
     * Misc
         - Refactored capability handling in Storage::DBI, allows for
